--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "nodemon": "^2.0.15",
     "sharp": "^0.29.3",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.3.0"
   }
 }
